// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MembershipService class when creating a payment session for a new memberhsip will return a client secret for a payment session for a user with a subscription 1`] = `
{
  "clientSecret": "pi_3PuyAkI1ADsIvyhF1fcohTWk_secret_ykKOAqkyzclpvYZd756qIOIuN",
  "currency": "cad",
  "discounts": undefined,
  "frequency": "year",
  "products": [
    {
      "price": 40,
      "product": "Pro Membership",
    },
  ],
  "tax": undefined,
  "total": 40,
}
`;

exports[`MembershipService class when creating a payment session for a new memberhsip will return a client secret if user already has an active subscription 1`] = `
{
  "clientSecret": "pi_3PuyAkI1ADsIvyhF1fcohTWk_secret_ykKOAqkyzclpvYZd756qIOIuN",
  "currency": "cad",
  "discounts": undefined,
  "frequency": "year",
  "products": [
    {
      "price": 40,
      "product": "Pro Membership",
    },
  ],
  "tax": undefined,
  "total": 40,
}
`;

exports[`MembershipService class when retrieving membership status for a user will return a non-membership response if user does not have a customer ID 1`] = `
{
  "accountTier": 0,
  "entitlements": [],
  "status": "none",
}
`;

exports[`MembershipService class when retrieving membership status for a user will return membership data if user has a Stripe customer but no active subscription 1`] = `
{
  "accountTier": 0,
  "entitlements": [],
  "status": "none",
}
`;

exports[`MembershipService class when retrieving membership status for a user will return membership details if the user has an active membership 1`] = `
{
  "accountTier": 100,
  "cancellationDate": undefined,
  "entitlements": [
    "pro-features",
  ],
  "nextBillingDate": 1761660240000,
  "status": "active",
  "trialEndDate": undefined,
}
`;

exports[`MembershipService class when retrieving membership status for a user will return membership status for a deleted Stripe customer 1`] = `
{
  "accountTier": 0,
  "entitlements": [],
  "status": "none",
}
`;

exports[`MembershipService class when updating a membership will cancel a subscription if downgrading do a free account 1`] = `
{
  "accountTier": 0,
  "entitlements": [],
  "status": "none",
}
`;

exports[`MembershipService class when updating a membership will perform a no-op if the user is already at the requested account tier 1`] = `
{
  "accountTier": 100,
  "cancellationDate": undefined,
  "entitlements": [
    "pro-features",
  ],
  "nextBillingDate": 1761660240000,
  "status": "active",
  "trialEndDate": undefined,
}
`;

exports[`MembershipService class when updating a membership will provision Stripe for a new customer and create a membership 1`] = `
{
  "accountTier": 100,
  "cancellationDate": undefined,
  "entitlements": [
    "pro-features",
  ],
  "nextBillingDate": 1761660240000,
  "status": "active",
  "trialEndDate": undefined,
}
`;

exports[`MembershipService class when updating a membership will provision a new membership for a user with an existing Stripe customer ID 1`] = `
{
  "accountTier": 100,
  "cancellationDate": undefined,
  "entitlements": [
    "pro-features",
  ],
  "nextBillingDate": 1761660240000,
  "status": "active",
  "trialEndDate": undefined,
}
`;

exports[`MembershipService class when updating a membership will upgrade/downgrade a user to a different membership tier 1`] = `
{
  "accountTier": 200,
  "cancellationDate": undefined,
  "entitlements": [
    "shop-owner-features",
    "pro-features",
  ],
  "nextBillingDate": 1756902199000,
  "status": "trialing",
  "trialEndDate": undefined,
}
`;

exports[`MembershipService class will retrieve a list of available membership tiers 1`] = `
[
  {
    "accountTier": 0,
    "currency": "cad",
    "description": "Get all of the features of BottomTime for personal use - for free!",
    "frequency": "year",
    "marketingFeatures": [
      "Upload and log your dives",
      "Track your dive metrics and history in your personal dashboard",
      "Find dive sites and dive shops",
      "Follow your dive buddies and",
      "Earn XP and level up",
    ],
    "name": "Free Account",
    "price": 0,
  },
  {
    "accountTier": 100,
    "currency": "cad",
    "description": "Get all of the features of a free account plus some added benefits:",
    "frequency": "year",
    "marketingFeatures": [
      "Add images and videos to your dive log entries",
      "Get advanced metrics with our enhanced dashboard for pro users",
      "Get a "Pro Diver" badge next to your username",
      "Earn XP faster than with a free account",
    ],
    "name": "Pro Membership",
    "price": 40,
  },
  {
    "accountTier": 200,
    "currency": "cad",
    "description": "Get all of the benefits of a pro account, plus the ability to register and manage your dive shop on our site.",
    "frequency": "year",
    "marketingFeatures": [
      "Register and manage your shop's profile",
      "Reach new divers by having your shop appear in search results",
      "Tag dive sites that your shop services to attract more customers",
    ],
    "name": "Shop Owner Membership",
    "price": 100,
  },
]
`;
